[tool.poetry]
name = "nestipy-dynamic-module"
version = "0.1.0"
description = ""
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"
packages = [{include = "nestipy_dynamic_module", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
nestipy-metadata = "^0.1.0"
nestipy-ioc = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
